--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@
 	width: 40px;
 	height: 40px;
 }
+.chess-board > div.selected {
+	background-color:green!important;
+}
 
 .chess-board > div > div {
 	width: 40px;
