--- a/css/style.css
+++ b/css/style.css
@@ -35,16 +35,19 @@
 	border:1px solid brown;
 }
 
-.chess-board > div {
+.chess-board > .square {
 	float: left;
 	width: 40px;
 	height: 40px;
 }
-.chess-board > div.selected {
+.chess-board > .square.available {
 	background-color:green!important;
 }
+.chess-board > .square > .piece.selected {
+	background-color:blue!important;
+}
 
-.chess-board > div > div {
+.chess-board > .square > .piece {
 	width: 40px;
 	height: 40px;
 }
